Style broadcast/unbroadcast button

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -11,14 +11,12 @@
   &:first-child {
     margin-top: 0;
   }
-
   .dropdown-menu {
     border-right: 0;
     min-width: initial;
     text-align: center;
     text-transform: uppercase;
   }
-
 }
 .advert-img {
   border-radius: 5px 5px 0 0;
@@ -110,9 +108,16 @@
     border-bottom: 0;
   }
 
-  .pull-left .btn {
+  .promote {
     border: 0;
     border-right: 1px solid @border-color;
+  }
+  .unpromote {
+    border: 0;
+    background-color: #fff;
+    color: @brand-primary;
+    border-right: 1px solid @border-color;
+    border-left: 1px solid @border-color;
   }
 
   .pull-right .btn {
