--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -154,10 +154,10 @@
   }
   .url {
     text-align: center;
-    background-color: #b00;
-    color: #fff;
+    color: #555;
     padding: 5px;
-    border: 0;
+    border: solid @border-color;
+    border-width: 1px 1px 0;
     width: 100%;
   }
 
