--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -55,22 +55,10 @@
       </div>
     {% endif %}
     <div class="btn-group pull-right">
-      <div class="btn-group">
-        <a class="btn btn-default btn-share" data-toggle="dropdown">
-          <i class="icon icon-share"></i>
-          <span>share</span>
-        </a>
-        <ul class="dropdown-menu pull-right">
-          {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
-          {% set tags = ad.tags|join(',') %}
-          {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
-          {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
-          {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
-
-          <li><a href="{{ facebookUrl }}" class="btn btn-default facebook-share"><i class="icon icon-facebook"></i><span>facebook</span></a></li>
-          <li><a href="{{ twitterUrl }}" class="btn btn-default tweet"><i class="icon icon-twitter twitter-share"></i><span>twitter</span></a></li>
-        </ul>
-      </div>
+      <a class="btn btn-default btn-share">
+        <i class="icon icon-share"></i>
+        <span>share</span>
+      </a>
       <div class="btn-group">
         <a class="btn btn-default btn-option" data-toggle="dropdown">
           <i class="icon icon-ads"></i>
@@ -96,11 +84,24 @@
           {% endif %}
         </ul>
       </div>
-
     </div>
   </div>
 
-  {# <div class="advert-action-content">
+  <div class="advert-action-content">
+    <div class="advert-share btn-group btn-group-justified">
+      {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
+      {% set tags = ad.tags|join(',') %}
+      {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
+      {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
+      {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
+
+      <input type="text" readonly="readonly" class="url" value="{{ url('adstacy_app_ad_show', {id: ad.id}) }}">
+      <a href="{{ facebookUrl }}" class="btn btn-facebook btn-social facebook-share"><i class="icon icon-facebook"></i><span>share</span></a>
+      <a href="{{ twitterUrl }}" class="btn btn-twitter btn-social tweet"><i class="icon icon-twitter twitter-share"></i><span>tweet</span></a>
+    </div>
+  </div>
+
+ {#  <div class="advert-action-content">
     {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
     {% set tags = ad.tags|join(',') %}
     {% set desc = remove_hashtag(ad.description) %}
