--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -25,15 +25,6 @@
   }
 }
 
-.delete-comment {
-  font-size: 14px;
-  color: #999;
-
-  &:hover {
-    text-decoration: none;
-  }
-}
-
 .comment-box {
   width: 100%;
   display: block;
@@ -205,6 +196,15 @@
   margin-top: 10px;
 }
 
+.delete-comment {
+  display: none;
+  font-size: 14px;
+  color: #999;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
 .comment {
   .comment-body {
     margin-left: 42px;
@@ -215,7 +215,13 @@
     float: left;
     margin-top: -1px;
   }
+  &:hover {
+    .delete-comment {
+      display: inline;
+    }
+  }
 }
+
 
 .load-more-comments {
   padding: 3px 0 0 0;
