--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -66,6 +66,12 @@ a.realname, a.username {
 }
 
 #user-profile {
+  border-radius: 5px;
+  margin-bottom: 10px;
+  img {
+    margin-right: 8px;
+    border-radius: 5px;
+  }
   .media {
     padding: 10px;
   }
@@ -80,6 +86,41 @@ a.realname, a.username {
     }
   }
 
+  .user-action {
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    a.score {
+      display: block;
+      float: left;
+      padding: 5px 10px;
+      background-color: #fff;
+      color: #999;
+      font-size: 10px;
+      border-right: 1px solid #eee;
+      width: 91px;
+      line-height: 1.2;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+    a.score.first {
+      border-bottom-left-radius: 5px;
+    }
+    a.score.last {
+      border-right: 0;
+    }
+    strong {
+      display: block;
+      color: #555;
+      font-size: 16px;
+    }
+    .btn {
+      float: right;
+      margin-right: 8px;
+      margin-top: 4px;
+    }
+  }
+
   .media-heading {
     margin: 0 0 5px;
 
@@ -87,10 +128,6 @@ a.realname, a.username {
       color: @brand-primary;
     }
   }
-}
-
-#user-profile + div {
-  margin-top: 15px;
 }
 
 #user-profile-menu {
