--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -200,7 +200,7 @@
       height: 30px;
     }
     .media-heading {
-      line-height: 0;
+      // line-height: 0;
       margin: 0;
     }
     .media-heading a {
