--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -54,6 +54,7 @@ body {
       margin-bottom: 5px;
       font-weight: 300;
       padding: 5px 20px;
+      white-space: nowrap;
     }
 
     a {
@@ -62,6 +63,7 @@ body {
       display: block;
       text-decoration: none;
       padding: 3px 20px;
+      white-space: nowrap;
 
       &:hover {
         background-color: @gray-lighter;
@@ -94,6 +96,7 @@ body {
 
 .site-container {
   padding-top: @navbar-height;
+  overflow: hidden;
 }
 
 .site-wrapper {
@@ -113,7 +116,18 @@ body {
   position: relative;
   top: 2px;
   margin-top: -2px;
-  border-width: 0 0 2px;
+  border-bottom: 2px solid transparent;
+  padding: 12px 15px;
+
+  .icon-bar {
+    display: block;
+    width: 20px;
+    height: 2px;
+    border-radius: 1px;
+  }
+  .icon-bar + .icon-bar {
+    margin-top: 5px;
+  }
 
   &:hover {
     background-color: transparent;
@@ -139,7 +153,7 @@ body {
 
     > li > a > .icon {
       font-size: 16px;
-      padding: 0 3px;
+      padding: 0 2px;
     }
   }
 }
@@ -276,7 +290,7 @@ body {
 
 @media (max-width: 599px) {
   .search-container {
-    margin-left: 60px;
+    margin-left: 50px;
   }
 
   #search-form {
