--- a/src/Adstacy/AppBundle/Resources/public/less/navbar.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/navbar.less
@@ -172,9 +172,9 @@
 
 .navbar-toggle {
   position: relative;
-  float: left;
+  // float: right;
   // margin-right: @navbar-padding-horizontal;
-  padding: 15px;
+  // padding: 9px 10px;
   // .navbar-vertical-align(34px);
   // background-color: transparent;
   // border: 1px solid transparent;
@@ -183,17 +183,17 @@
   // Bars
   .icon-bar {
     display: block;
-    width: 30px;
+    width: 22px;
     height: 2px;
     border-radius: 1px;
   }
   .icon-bar + .icon-bar {
-    margin-top: 7px;
+    margin-top: 4px;
   }
 
-  @media (min-width: 600px) {
-    display: none;
-  }
+  // @media (min-width: @grid-float-breakpoint) {
+  //   display: none;
+  // }
 }
 
 
@@ -206,8 +206,8 @@
   // margin: (@navbar-padding-vertical / 2) -@navbar-padding-horizontal;
 
   > li > a {
-    padding-top:    15px;
-    padding-bottom: 15px;
+    padding-top:    10px;
+    padding-bottom: 10px;
     line-height: @line-height-computed;
   }
 
@@ -236,18 +236,18 @@
   // }
 
   // Uncollapse the nav
-  @media (min-width: @grid-float-breakpoint) {
-    float: left;
-    margin: 0;
+  // @media (min-width: @grid-float-breakpoint) {
+  //   float: left;
+  //   margin: 0;
 
-    > li {
-      float: left;
-      > a {
-        padding-top: ((@navbar-height - @line-height-computed) / 2);
-        padding-bottom: ((@navbar-height - @line-height-computed) / 2);
-      }
-    }
-  }
+  //   > li {
+  //     float: left;
+  //     > a {
+  //       padding-top: ((@navbar-height - @line-height-computed) / 2);
+  //       padding-bottom: ((@navbar-height - @line-height-computed) / 2);
+  //     }
+  //   }
+  // }
 
 }
 
