--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -65,7 +65,7 @@
   border: 1px solid #e3e3e3;
 }
 
-#ad_title, #ad_youtubeUrl {
+#ad_title, #ad_youtubeUrl, #ad_tags {
   border: 0;
   .box-shadow(none);
 }
