--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -80,6 +80,12 @@ body {
       margin-bottom: 20px;
     }
   }
+  .current {
+    background: #b00;
+    a {
+      color: #fff;
+    }
+  }
 }
 
 .site-content {
