--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -92,7 +92,12 @@
     <div class="advert-share btn-group btn-group-justified">
       {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
       {% set tags = ad.tags|join(',') %}
-      {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
+      {% set desc = '' %}
+      {% if ad.type == 'text' %}
+        {% set desc = ad.title %}
+      {% else %}
+        {% set desc = ad.description|striptags|slice(0, 160) %}
+      {% endif %}
       {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
       {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
 
