--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -4,8 +4,8 @@
 .advert {
   background: #fff;
   margin: 15px auto 0;
-  border: 1px solid @border-color;
-  border-radius: 5px;
+  border-bottom: 1px solid @border-color;
+  border-top: 1px solid @border-color;
   // .box-shadow(0 1px 1px @gray-light);
 
   &:first-child {
@@ -18,13 +18,6 @@
     text-transform: uppercase;
   }
 }
-.advert-img {
-  border-radius: 5px 5px 0 0;
-  img.full {
-    border-radius: 5px 5px 0 0;
-  }
-}
-
 .comment-box {
   width: 100%;
   display: block;
