--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -1,10 +1,10 @@
 .users {
-  width: 450px;
+  width: 500px;
 }
 .user {
   width: 100%;
-  margin: 0 auto 10px;
   padding: 10px;
+  border-bottom: 1px solid #ccc;
 
   .profile-picture {
     float: left;
@@ -18,10 +18,13 @@
   }
   .user-detail {
     float: left;
-    width: 280px;
+    width: 70%;
+    p {
+      margin: 0;
+    }
   }
   .user-actions {
-    float: left;
+    float: right;
     width: 80px;
   }
   .user-info {
@@ -68,6 +71,7 @@ a.realname, a.username {
 #user-profile {
   border-radius: 5px;
   margin-bottom: 10px;
+  width: 500px;
   img {
     margin-right: 8px;
     border-radius: 5px;
