--- a/src/Adstacy/AppBundle/Resources/views/App/explore.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/explore.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Explore Latest Ads | Adstacy{% endblock %}
 
 {% block content %}
-  <div class="site-body jscroll">
+  <div class="jscroll">
     {{ block('ajax_content') }}
   </div>
 {% endblock %}
