--- a/src/Adstacy/AppBundle/Resources/views/User/user_profile.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user_profile.html.twig
@@ -1,4 +1,4 @@
-<div id="user-profile" class="item panel panel-default">
+<div id="user-profile" class="panel panel-default">
   <div class="media">
     <div class="pull-left">
       <img src="{{ profile_pic(user) }}" class="media-object" width="120" height="120">
