--- a/src/Adstacy/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
@@ -1,4 +1,4 @@
-{% extends 'AdstacyAppBundle::layout.html.twig' %}
+{% extends '::base_single_column.html.twig' %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="jumbotron text-center">
+  <div class="jumbotron text-center column">
     <p class="lead">{{ 'resetting.password_already_requested'|trans }}</p>
   </div>
 {% endblock %}
