--- a/src/Adstacy/UserBundle/Resources/views/Resetting/reset.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/reset.html.twig
@@ -1,4 +1,4 @@
-{% extends 'AdstacyAppBundle::layout.html.twig' %}
+{% extends '::base_single_column.html.twig' %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
@@ -25,7 +25,7 @@
 {% block content %}
 {% trans_default_domain 'FOSUserBundle' %}
 
-<div id="reset-verification" class="panel panel-default">
+<div id="reset-verification" class="panel panel-default column">
   <div class="panel-heading">
     <h1>Reset Verification</h1>
   </div>
