--- a/src/Adstacy/AppBundle/Resources/public/less/layout/contact.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/contact.less
@@ -1,8 +1,8 @@
 @import "../variables.less";
 
 #contactus-container {
-  margin: 0 15px;
-
+  margin: 0 auto;
+  width: 600px;
   .form-group,
   .form-widget,
   .form-text {
