--- a/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
@@ -1,4 +1,4 @@
-{% extends 'AdstacyAppBundle::layout.html.twig' %}
+{% extends '::base_single_column.html.twig' %}
 
 {% form_theme form _self %}
 
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="contactus-container" class="panel panel-default">
+  <div id="contactus-container" class="panel panel-default column">
     <div class="panel-heading">
       <h1>Contact Us<i class="icon icon-envelope-alt"></i></h1>
     </div>
