--- a/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
@@ -1,12 +1,10 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
 {% block content %}
-  <div class="adstacy-container">
-    <a href="{{ path('adstacy_app_who_to_follow') }}" class="btn btn-default" title="{{"find_friends"|trans}}">{{"find_friends"|trans}}</a>
-    <a href="{{ path('adstacy_app_who_to_follow_facebook') }}" class="btn btn-default" title="{{"find_friends"|trans}}">{{"find_friends_facebook"|trans}}</a>
-    <a href="{{ path('adstacy_app_who_to_follow_twitter') }}" class="btn btn-default" title="{{"find_friends_twitter"|trans}}">{{"find_friends_twitter"|trans}}</a>
-    {{ block('ajax_content') }}
-  </div>
+  <a href="{{ path('adstacy_app_who_to_follow') }}" class="" title="{{"find_friends"|trans}}">{{"find_friends"|trans}}</a>
+  <a href="{{ path('adstacy_app_who_to_follow_facebook') }}" class="" title="{{"find_friends"|trans}}">{{"find_friends_facebook"|trans}}</a>
+  <a href="{{ path('adstacy_app_who_to_follow_twitter') }}" class="" title="{{"find_friends_twitter"|trans}}">{{"find_friends_twitter"|trans}}</a>
+  {{ block('ajax_content') }}
 {% endblock %}
 
 {% block ajax_content %}
