--- a/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="change-password" class="item panel panel-default">
+  <div id="change-password" class="panel panel-default column">
     <div class="panel-heading"><h1>{{"form_password.title"|trans}}</h1></div>
     <div class="panel-body">
       {{ form_start(form, { attr: { class: '', role: 'form' } }) }}
