--- a/src/Adstacy/UserBundle/Resources/views/Resetting/checkEmail.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/checkEmail.html.twig
@@ -1,4 +1,4 @@
-{% extends 'AdstacyAppBundle::layout.html.twig' %}
+{% extends '::base_single_column.html.twig' %}
 
 {% block stylesheets %}
   {{ parent() }}
@@ -12,7 +12,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block content %}
-  <div class="jumbotron text-center">
+  <div class="jumbotron text-center column">
     <p class="lead">{{ 'resetting.check_email'|trans({'%email%': email}) }}</p>
   </div>
 {% endblock %}
