--- a/src/Adstacy/UserBundle/Resources/views/Resetting/request.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/request.html.twig
@@ -1,4 +1,4 @@
-{% extends 'AdstacyAppBundle::layout.html.twig' %}
+{% extends '::base_single_column.html.twig' %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="reset-password" class="panel panel-default">
+  <div id="reset-password" class="panel panel-default column">
     <div class="panel-heading">
       <h1>Reset Password</h1>
     </div>
