--- a/src/Adstacy/AppBundle/Resources/public/less/bootstrap/buttons.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/bootstrap/buttons.less
@@ -18,7 +18,7 @@
   vertical-align: middle;
   cursor: pointer;
   border: 1px solid transparent;
-  border-radius: @border-radius-base;
+  border-radius: 3px;
   white-space: nowrap;
   .user-select(none);
 
@@ -58,8 +58,33 @@
   .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border);
 }
 .btn-primary {
-  .button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border);
+  border: 1px solid #df0909;
+  border-radius: 3px;
+  text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+  font-weight:bold;
+  font-size: 12px;
+  color: #FFFFFF;
+  background-color: #f62b2b;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f62b2b), to(#d20202));
+  background-image: -webkit-linear-gradient(top, #f62b2b, #d20202);
+  background-image: -moz-linear-gradient(top, #f62b2b, #d20202);
+  background-image: -ms-linear-gradient(top, #f62b2b, #d20202);
+  background-image: -o-linear-gradient(top, #f62b2b, #d20202);
+  background-image: linear-gradient(to bottom, #f62b2b, #d20202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f62b2b, endColorstr=#d20202);
+  &:hover {
+    color: #fff;
+    border: 1px solid #b30808;
+    background-color: #e40a0a;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#e40a0a), to(#9f0202));
+    background-image: -webkit-linear-gradient(top, #e40a0a, #9f0202);
+    background-image: -moz-linear-gradient(top, #e40a0a, #9f0202);
+    background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
+    background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
+    background-image: linear-gradient(to bottom, #e40a0a, #9f0202);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
+  }
 }
+
 // Warning appears as orange
 .btn-warning {
   .button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border);
@@ -70,7 +95,31 @@
 }
 // Success appears as green
 .btn-success {
-  .button-variant(@btn-success-color; @btn-success-bg; @btn-success-border);
+  border: 1px solid #8bcf54;
+  border-radius: 3px;
+  font-size:12px;
+  text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+  font-weight:bold;
+  color: #FFFFFF;
+  background-color: #a9db80;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#a9db80), to(#96c56f));
+  background-image: -webkit-linear-gradient(top, #a9db80, #96c56f);
+  background-image: -moz-linear-gradient(top, #a9db80, #96c56f);
+  background-image: -ms-linear-gradient(top, #a9db80, #96c56f);
+  background-image: -o-linear-gradient(top, #a9db80, #96c56f);
+  background-image: linear-gradient(to bottom, #a9db80, #96c56f);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a9db80, endColorstr=#96c56f);
+  &:hover {
+    border: 1px solid #74bf36;
+    background-color: #8ed058;
+    color: #fff;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#8ed058), to(#7bb64b));
+    background-image: -webkit-linear-gradient(top, #8ed058, #7bb64b);
+    background-image: -moz-linear-gradient(top, #8ed058, #7bb64b);
+    background-image: -ms-linear-gradient(top, #8ed058, #7bb64b);
+    background-image: -o-linear-gradient(top, #8ed058, #7bb64b);
+    background-image: linear-gradient(to bottom, #8ed058, #7bb64b);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#8ed058, endColorstr=#7bb64b);
+  }
 }
 // Info appears as blue-green
 .btn-info {
