--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -344,6 +344,10 @@ body {
     box-shadow: 0 0 1px #ccc;
     min-width: 500px;
     margin-bottom: 20px;
+    .panel {
+      margin: 0;
+      border: 0;
+    }
   }
 
   .site-sidebar {
