--- a/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
@@ -1,10 +1,23 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  {% stylesheets filter='cssrewrite, uglifycss'
+    'bundles/adstacyapp/less/layout/who-to-follow.less'
+  %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
+  {% endstylesheets %}
+{% endblock %}
+
 {% block content %}
-  <a href="{{ path('adstacy_app_who_to_follow') }}" class="" title="{{"find_friends"|trans}}">{{"find_friends"|trans}}</a>
-  <a href="{{ path('adstacy_app_who_to_follow_facebook') }}" class="" title="{{"find_friends"|trans}}">{{"find_friends_facebook"|trans}}</a>
-  <a href="{{ path('adstacy_app_who_to_follow_twitter') }}" class="" title="{{"find_friends_twitter"|trans}}">{{"find_friends_twitter"|trans}}</a>
-  {{ block('ajax_content') }}
+  <div id="who-to-follow">
+    <div class="toolbar clearfix">
+      <a href="{{ path('adstacy_app_who_to_follow') }}" class="adstacy" title="{{"find_friends"|trans}}">{{"find_friends"|trans}}</a>
+      <a href="{{ path('adstacy_app_who_to_follow_facebook') }}" class="facebook" title="{{"find_friends"|trans}}">{{"find_friends_facebook"|trans}}</a>
+      <a href="{{ path('adstacy_app_who_to_follow_twitter') }}" class="twitter" title="{{"find_friends_twitter"|trans}}">{{"find_friends_twitter"|trans}}</a>
+    </div>
+    {{ block('ajax_content') }}
+  </div>
 {% endblock %}
 
 {% block ajax_content %}
