--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -3,10 +3,10 @@
 
 .advert {
   background: #fff;
-  margin: 15px auto 0;
-  border-bottom: 1px solid @border-color;
-  border-top: 1px solid @border-color;
-  // .box-shadow(0 1px 1px @gray-light);
+  margin: 15px auto 25px;
+  border: 1px solid @border-color;
+  border-radius: 5px;
+  box-shadow: 0 0 1px #aaa;
 
   &:first-child {
     margin-top: 0;
@@ -18,6 +18,15 @@
     text-transform: uppercase;
   }
 }
+
+.advert-img {
+  border-radius: 5px 5px 0 0;
+  border-bottom: 1px solid @border-color;
+  img.full {
+    border-radius: 5px 5px 0 0;
+  }
+}
+
 .comment-box {
   width: 100%;
   display: block;
@@ -37,7 +46,6 @@
     background-color: #fff;
   }
 }
-
 
 .jscroll-added .advert:first-child {
   margin-top: 15px;
@@ -85,7 +93,6 @@
 
 .advert-action {
   background: #f2f2f2;
-  border-top: 1px solid @border-color;
 
   .btn {
     height: 46px;
