--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -338,16 +338,19 @@ body {
 @media (min-width: 960px) {
   .site-body {
     float: left;
-    background: #fff;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    box-shadow: 0 0 1px #ccc;
     min-width: 500px;
     margin-bottom: 20px;
     .panel {
       margin: 0;
       border: 0;
     }
+  }
+
+  .site-body-bg {
+    background: #fff;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 1px #ccc;
   }
 
   .site-sidebar {
