--- a/src/Adstacy/AppBundle/Resources/views/App/explore.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/explore.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Explore Latest Ads | Adstacy{% endblock %}
 
+{% block site_body_class %}site-body-no-bg{% endblock %}
+
 {% block content %}
   <div class="jscroll">
     {{ block('ajax_content') }}
