--- a/src/Adstacy/AppBundle/Resources/views/App/trending.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/trending.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Trending ads | Adstacy{% endblock %}
 
+{% block site_body_class %}site-body-no-bg{% endblock %}
+
 {% block content %}
   {{ block('ajax_content') }}
 {% endblock %}
