--- a/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
@@ -1,5 +1,7 @@
 {% extends 'AdstacyAppBundle:Search:search.html.twig' %}
 
+{% block site_body_class %}site-body-no-bg{% endblock %}
+
 {% block search_content %}
   {% if paginator.getCurrentPageResults|length > 0 and app.request.query.get('q') != '' %}
     <div class="jscroll">
