Style user.less

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -105,6 +105,7 @@ a.realname, a.username {
       line-height: 1.2;
       &:hover {
         text-decoration: none;
+        background-color: #eee;
       }
     }
     a.score.first {
@@ -131,6 +132,12 @@ a.realname, a.username {
     a {
       color: @brand-primary;
     }
+  }
+}
+
+.site-body-no-bg {
+  #user-profile {
+    border: 1px solid #ccc;
   }
 }
 
