--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -49,8 +49,8 @@
         <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote promote {% if promoted %}hide{% endif %}" title="Broadcast">
           <i class="icon icon-bullhorn"></i><span>broadcast</span>
         </a>
-        <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Unbroadcast">
-          <i class="icon icon-bullhorn"></i><span>unbroadcast</span>
+        <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Broadcasted">
+          <i class="icon icon-bullhorn"></i><span>broadcasted</span>
         </a>
       </div>
     {% endif %}
