--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -167,7 +167,26 @@
 
               {% block content %}{% endblock %}
             </div>
-            {% block sidebar %}{% endblock %}
+            <div class="site-sidebar">
+              {% block sidebar %}
+              <div class="site-aside">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, quo, ipsam,
+                  temporibus, nulla voluptate vero numquam porro necessitatibus libero molestias
+                  natus alias repellat aliquid neque asperiores vitae beatae voluptates nobis
+                  excepturi aut labore quia fugiat eaque corrupti rem velit deserunt.
+                </p>
+              </div>
+              <div class="site-aside">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, quo, ipsam,
+                  temporibus, nulla voluptate vero numquam porro necessitatibus libero molestias
+                  natus alias repellat aliquid neque asperiores vitae beatae voluptates nobis
+                  excepturi aut labore quia fugiat eaque corrupti rem velit deserunt.
+                </p>
+              </div>
+              {% endblock %}
+            </div>
           </div>
         </div>
       {% endblock %}
