--- a/src/Adstacy/AppBundle/Resources/views/Search/users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/users.html.twig
@@ -6,7 +6,7 @@
       {{ block('ajax_content') }}
     </div>
   {% else %}
-    <div class="jumbotron text-center">
+    <div class="text-center">
       <h1>{{"search.no_result.message"|trans}}</h1>
       <p class="lead">{{"search.no_result.help"|trans}}</p>
     </div>
