--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -8,21 +8,22 @@
 {% set commentsLeft = ad.commentsCount - commentsLength %}
 <div class="advert item" data-username="{{ ad.user.username }}">
   {% if ad.type == 'image' %}
-    <div class="advert-img">
-      {% set thumbnail, original = null, null %}
-      {% set original = vich_uploader_asset(ad, 'image') %}
-      {% set width = ad.imageWidth %}
-      {% if ad.imageWidth >= thumb_width %}
-        {% set thumbnail = original|imagine_filter('thumbnail') %}
-        {% set width = thumb_width %}
-      {% else %}
-        {% set thumbnail = original %}
-      {% endif %}
+    {% set thumbnail, original = null, null %}
+    {% set original = vich_uploader_asset(ad, 'image') %}
+    {% set width = ad.imageWidth %}
+    {% if ad.imageWidth >= thumb_width %}
+      {% set thumbnail = original|imagine_filter('thumbnail') %}
+      {% set width = thumb_width %}
+    {% else %}
+      {% set thumbnail = original %}
+    {% endif %}
+    {% set height = ad.imageHeight(width) %}
+    <div class="advert-img" style="height: {{ height }}px">
       <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}">
         <img class="lazy {% if ad.imageWidth >= thumb_width %}full{% endif %}" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
           data-original="{{ thumbnail }}"
           data-high-res="{{ original }}"
-          width="{{ width }}" height="{{ ad.imageHeight(width) }}">
+          width="{{ width }}" height="{{ height }}">
       </a>
     </div>
   {% elseif ad.type == 'text' %}
