--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -2,7 +2,7 @@
 @import "../bootstrap/mixins.less";
 
 #create-advert {
-  // width: 480px;
+  width: 480px;
 
   label {
     color: #555;
@@ -74,12 +74,8 @@
   display: block;
   padding: 7px;
   text-align: center;
-  background-color: #f2f2f2;
-  color: #555;
   text-decoration: none;
-  &:hover {
-    background-color: #ddd;
-  }
+  border-radius: 0;
 }
 
 #create-advert-image-modal {
