--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -102,9 +102,6 @@ body {
   margin: 0 auto;
 }
 
-.site-body {
-}
-
 .site-sidebar {
   display: none;
   float: left;
@@ -344,6 +341,9 @@ body {
       margin: 0;
       border: 0;
     }
+  }
+  .site-body-full {
+    width: 100%;
   }
 
   .site-body-bg {
