--- a/src/Adstacy/NotificationBundle/Resources/views/all_notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/all_notifications.html.twig
@@ -1,5 +1,5 @@
-<div class="page-title jumbotron text-center">
-  <h1>Notifications</h1>
+<div class="page-title text-center">
+  <h2>Notifications</h2>
 </div>
 <ul id="all-notifications" class="list-group notifications">
   {% if notifications|length > 0 %}
