--- a/src/Adstacy/AppBundle/Resources/public/css/adstacy.css
+++ b/src/Adstacy/AppBundle/Resources/public/css/adstacy.css
@@ -1,13 +1,14 @@
 @font-face {
 	font-family: 'adstacy';
-	src:url('../font/adstacy.eot?-phk9vu');
-	src:url('../font/adstacy.eot?#iefix-phk9vu') format('embedded-opentype'),
-		url('../font/adstacy.ttf?-phk9vu') format('truetype'),
-		url('../font/adstacy.woff?-phk9vu') format('woff'),
-		url('../font/adstacy.svg?-phk9vu#adstacy') format('svg');
+	src:url('../font/adstacy.eot');
+	src:url('../font/adstacy.eot?#iefix') format('embedded-opentype'),
+		url('../font/adstacy.ttf') format('truetype'),
+		url('../font/adstacy.woff') format('woff'),
+		url('../font/adstacy.svg#adstacy') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
+
 .icon {
 	font-family: 'adstacy';
 	speak: none;
@@ -21,177 +22,142 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
 .icon-home:before {
-	content: "\e000";
-}
-.icon-rss:before {
-	content: "\e001";
-}
-.icon-rocket:before {
-	content: "\e002";
-}
-.icon-search:before {
-	content: "\e003";
-}
-.icon-plus:before {
-	content: "\e004";
-}
-.icon-user:before {
-	content: "\e005";
-}
-.icon-gear:before {
-	content: "\e006";
-}
-.icon-off:before {
-	content: "\e007";
-}
-.icon-angle-up:before {
-	content: "\e008";
-}
-.icon-angle-down:before {
-	content: "\e009";
-}
-.icon-facebook:before {
-	content: "\e00a";
-}
-.icon-twitter:before {
-	content: "\e00b";
-}
-.icon-share:before {
-	content: "\e00c";
-}
-.icon-envelope-alt:before {
-	content: "\e00d";
-}
-.icon-edit:before {
-	content: "\e00e";
-}
-.icon-delete:before {
-	content: "\e00f";
-}
-.icon-ads:before {
-	content: "\e010";
-}
-.icon-bullhorn:before {
-	content: "\e011";
-}
-.icon-hash:before {
-	content: "\e012";
-}
-.icon-star:before {
-	content: "\e013";
-}
-.icon-ok-sign:before {
-	content: "\e014";
-}
-.icon-bell:before {
-	content: "\e015";
-}
-.icon-globe:before {
-	content: "\e016";
-}
-.icon-tags:before {
-	content: "\e017";
-}
-.icon-align-left:before {
 	content: "\e600";
 }
-.icon-align-center:before {
+.icon-globe:before {
 	content: "\e601";
 }
-.icon-align-right:before {
+.icon-rocket:before {
 	content: "\e602";
 }
-.icon-align-justify:before {
+.icon-rss:before {
 	content: "\e603";
 }
-.icon-indent-left:before {
+.icon-user:before {
 	content: "\e604";
 }
-.icon-indent-right:before {
+.icon-users:before {
 	content: "\e605";
 }
-.icon-bold:before {
+.icon-user-add:before {
 	content: "\e606";
 }
-.icon-italic:before {
+.icon-gear:before {
 	content: "\e607";
 }
-.icon-underline:before {
+.icon-off:before {
 	content: "\e608";
 }
-.icon-strikethrough:before {
+.icon-search:before {
 	content: "\e609";
 }
-.icon-list-ul:before {
+.icon-plus:before {
 	content: "\e60a";
 }
-.icon-list-ol:before {
+.icon-bell:before {
 	content: "\e60b";
 }
-.icon-save:before {
+.icon-bullhorn:before {
 	content: "\e60c";
 }
-.icon-copy:before {
+.icon-share:before {
 	content: "\e60d";
 }
-.icon-cut:before {
+.icon-facebook:before {
 	content: "\e60e";
 }
-.icon-paste:before {
+.icon-twitter:before {
 	content: "\e60f";
 }
-.icon-paper-clip:before {
+.icon-ellipsis:before {
 	content: "\e610";
 }
-.icon-unlink:before {
+.icon-eye:before {
 	content: "\e611";
 }
-.icon-undo:before {
+.icon-flag:before {
 	content: "\e612";
 }
-.icon-repeat:before {
+.icon-edit:before {
 	content: "\e613";
 }
-.icon-quote-left:before {
+.icon-delete:before {
 	content: "\e614";
 }
-.icon-file:before {
+.icon-mail:before {
 	content: "\e615";
 }
-.icon-font:before {
+.icon-star:before {
 	content: "\e616";
 }
-.icon-resize-full:before {
+.icon-comments:before {
 	content: "\e617";
 }
-.icon-resize-small:before {
+.icon-ok-sign:before {
 	content: "\e618";
 }
-.icon-th:before {
+.icon-file:before {
 	content: "\e619";
 }
-.icon-th-list:before {
+.icon-image:before {
 	content: "\e61a";
 }
-.icon-th-large:before {
+.icon-video:before {
 	content: "\e61b";
 }
-.icon-text-height:before {
+.icon-tags:before {
 	content: "\e61c";
 }
-.icon-text-width:before {
+.icon-info:before {
 	content: "\e61d";
 }
-.icon-list:before {
+.icon-bold:before {
 	content: "\e61e";
 }
-.icon-camera:before {
+.icon-italic:before {
 	content: "\e61f";
 }
-.icon-bubbles:before {
+.icon-align-left:before {
 	content: "\e620";
 }
-.icon-flag:before {
+.icon-align-center:before {
 	content: "\e621";
+}
+.icon-align-right:before {
+	content: "\e622";
+}
+.icon-list-ol:before {
+	content: "\e623";
+}
+.icon-list-ul:before {
+	content: "\e624";
+}
+.icon-link:before {
+	content: "\e625";
+}
+.icon-code:before {
+	content: "\e626";
+}
+.icon-angle-up:before {
+	content: "\e627";
+}
+.icon-angle-down:before {
+	content: "\e628";
+}
+.icon-angle-left:before {
+	content: "\e629";
+}
+.icon-angle-right:before {
+	content: "\e62a";
+}
+.icon-circle:before {
+	content: "\e62b";
+}
+.icon-hash:before {
+	content: "\e62c";
+}
+.icon-ads:before {
+	content: "\e62d";
 }
