apply icon font.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -119,7 +119,7 @@
                     <a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}" title="{{ "profile"|trans }}"><i class="icon icon-user"></i> {{ "profile"|trans }}</a>
                   </li>
                   <li {% if app.request.attributes.get('_route') == 'adstacy_app_who_to_follow' %}class="current"{% endif %}>
-                    <a href="{{ path('adstacy_app_who_to_follow') }}" title="{{ "find_friends"|trans }}"><i class="icon icon-frined"></i> {{ "find_friends"|trans }}</a>
+                    <a href="{{ path('adstacy_app_who_to_follow') }}" title="{{ "find_friends"|trans }}"><i class="icon icon-user-add"></i> {{ "find_friends"|trans }}</a>
                   </li>
                   <li {% if app.request.attributes.get('_route') == 'fos_user_profile_edit' %}class="current"{% endif %}>
                     <a href="{{ path('fos_user_profile_edit') }}" title="{{ "settings"|trans }}"><i class="icon icon-gear"></i> {{ "settings"|trans }}</a>
